--- a/app.json
+++ b/app.json
@@ -1,9 +1,21 @@
-port <- Sys.getenv('PORT')
-
-server <- rdm("BMS_jobs_2.Rmd")
-
-server$run(
-	host = '0.0.0.0',
-	port = as.numeric(port),
-	swagger=TRUE
-)
+{
+  "name": "heroku-shiny-app",
+  "stack": "heroku-18",
+  "description": "This is an example Shiny application, which uses the heroku-buildpack-r for Heroku.",
+  "keywords": [
+    "r",
+    "shiny"
+  ],
+  "repository": "https://github.com/vbinimelis/BMS_jobs.git",
+  "success_url": "/",
+  "formation": {
+    "web": {
+      "quantity": 1
+    }
+  },
+  "buildpacks": [
+    {
+      "url": "https://github.com/virtualstaticvoid/heroku-buildpack-r.git"
+    }
+  ]
+}
